# QSkAssist

./: CMakeLists.txt  main.cpp  readme.md
logic/: CMakeLists.txt  skconfig.cpp  skconfig.h  sktest.cpp  sktest.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  udpsocket.cpp  udpsocket.h
userif/: CMakeLists.txt  mainview.cpp  mainview.h  skdata.cpp  skdata.h  skdialog.cpp  skdialog.h  sklist.cpp  sklist.h  skmenu.cpp  skmenu.h  sktree.cpp  sktree.h
